# paperscout_v3

./: .env  .env.example  Gesicherte Terminal-Ausgabe.txt  README.md  app.py  app2.py  hello.py  journals_input.xlsx  paperscout-newui.py  paperscout.py  paperscouty.py  pyproject.toml  requirements.txt  results_with_abstracts.xlsx  secrets_template.toml
.devcontainer/: devcontainer.json
.streamlit/: secrets.toml
app/: __init__.py  app.py
src/paperscout/: cli.py  pipeline.py  schemas.py
src/paperscout/exporters/: excel.py
src/paperscout/sources/: apa_fallback.py  auth.py  crossref_strict.py
